Fix position -> how-to__wrap--brunette

--- a/source/sass/blocks/how-to.scss
+++ b/source/sass/blocks/how-to.scss
@@ -129,7 +129,7 @@
   .how-to__wrap--brunette {
     margin: 0 auto;
     width: 500px;
-    transform: translateX(-280px);
+    transform: translateX(-140px);
   }
 
   .how-to__title {
